objects/Maintenance_Asset_Part__c.object
<CustomObject>
    <fields>
        <fullName>ERP_Flag__c</fullName>
        <label>EPR Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Asset__c</fullName>
        <label>Maintenance Asset</label>
        <referenceTo>MaintenanceAsset</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Maintenance_Asset_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <label>Part Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Hub__c</fullName>
        <label>Parts Hub</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Ordered__c</fullName>
        <label>Quantity Ordered</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Used__c</fullName>
        <label>Quantity Used</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staging_Location__c</fullName>
        <label>Staging Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Location__c</fullName>
        <label>Sub Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Maintenance Asset Part</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Asset Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>